--- a/src/FoodZone/FoodZone.Web/Views/Home/About.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Home/About.cshtml
@@ -116,7 +116,7 @@
                             </div>
                         </div>
                         <div class="team-info text-center">
-                            <h5 class="name">Anh Tuan Pham</h5>
+                            <h5 class="name">Phạm Tuấn Anh</h5>
                             <div class="position">Tester</div>
                         </div>
                     </div>
