--- a/src/FoodZone/FoodZone.Web/Views/Home/_CustomerFeedback.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Home/_CustomerFeedback.cshtml
@@ -14,29 +14,30 @@
                             <!--Single Testimonial Start-->
                             <div class="single-testimonial text-center">
                                 <div class="testimonial-img">
-                                    <img src="assets/images/testimonial/testimonial1.jpg" alt="">
+                                    <img src="assets/images/team/2.jpg" alt="">
                                 </div>
                                 <div class="testimonial-content">
                                     <p>
-                                        These guys have been absolutely outstanding. Perfect Themes and the best of all that you have many options to choose! Best Support team ever! Very fast responding! Thank you very much! I highly recommend this theme
-                                        and these people!
+                                        Hoàng Anh thực sự hài lòng về đồ ăn tại FoodZone. Nhiều đồ ăn tươi ngon giá cả lại hợp lý với hầu hết các bạn trẻ. 
+                                        Khi nào có liên hoan đông người chắc chắn Hoàng Anh sẽ rủ bạn bè đến đây. 
+                                        Hi vọng nhà hàng sẽ phát triển hơn nữa. Nhiều bạn đến đây sẽ thích cho xem.
                                     </p>
                                     <div class="testimonial-author">
-                                        <h6>Katherine Sullivan <span>Customer</span></h6>
+                                        <h6>Hoàng Anh<span>Khách hàng</span></h6>
                                     </div>
                                 </div>
                             </div>
                             <div class="single-testimonial text-center">
                                 <div class="testimonial-img">
-                                    <img src="assets/images/testimonial/testimonial1.jpg" alt="">
+                                    <img src="~/assets/images/team/5.jpg" alt="">
                                 </div>
                                 <div class="testimonial-content">
                                     <p>
-                                        These guys have been absolutely outstanding. Perfect Themes and the best of all that you have many options to choose! Best Support team ever! Very fast responding! Thank you very much! I highly recommend this theme
-                                        and these people!
+                                        Hưng có dịp ghé FoodZone vào một dịp trời thu. Ăn một lần mà rất nhớ vị lẩu ở đây, có gì đó khác so với các nhà hàng buffet mình đã từng ăn.
+                                        Mọi người cứ đến ăn FoodZone để trải nghiệm như Hưng nhé.
                                     </p>
                                     <div class="testimonial-author">
-                                        <h6>Katherine Sullivan <span>Customer</span></h6>
+                                        <h6>Hưng<span>Khách hàng</span></h6>
                                     </div>
                                 </div>
                             </div>
@@ -46,29 +47,29 @@
                             <!--Single Testimonial Start-->
                             <div class="single-testimonial text-center">
                                 <div class="testimonial-img">
-                                    <img src="assets/images/testimonial/testimonial1.jpg" alt="">
+                                    <img src="assets/images/team/1.jpg" alt="">
                                 </div>
                                 <div class="testimonial-content">
                                     <p>
-                                        These guys have been absolutely outstanding. Perfect Themes and the best of all that you have many options to choose! Best Support team ever! Very fast responding! Thank you very much! I highly recommend this theme
-                                        and these people!
+                                        FoodZone là nhà hàng mình thấy đặc biệt ngon và phù hợp với các bạn trẻ. Đồ ăn ở đây vừa tươi, ngon miệng rất vừa vị mà còn đẹp mắt.
+                                        Mọi người cứ thử đến ăn FoodZone để trải nghiệm nhé. Đức nghiện FoodZone mất rồi. Chắc chắn sẽ còn đến đây nhiều lần đấy !
                                     </p>
                                     <div class="testimonial-author">
-                                        <h6>Katherine Sullivan <span>Customer</span></h6>
+                                        <h6>Quang<span>Khách hàng</span></h6>
                                     </div>
                                 </div>
                             </div>
                             <div class="single-testimonial text-center">
                                 <div class="testimonial-img">
-                                    <img src="assets/images/testimonial/testimonial1.jpg" alt="">
+                                    <img src="assets/images/team/4.jpg" alt="">
                                 </div>
                                 <div class="testimonial-content">
                                     <p>
-                                        These guys have been absolutely outstanding. Perfect Themes and the best of all that you have many options to choose! Best Support team ever! Very fast responding! Thank you very much! I highly recommend this theme
-                                        and these people!
+                                        FoodZone là nhà hàng mình thấy đặc biệt ngon và phù hợp với các bạn trẻ. Đồ ăn ở đây vừa tươi, ngon miệng rất vừa vị mà còn đẹp mắt. 
+                                        Mọi người cứ thử đến ăn FoodZone để trải nghiệm nhé. Đức nghiện FoodZone mất rồi. Chắc chắn sẽ còn đến đây nhiều lần đấy !
                                     </p>
                                     <div class="testimonial-author">
-                                        <h6>Katherine Sullivan <span>Customer</span></h6>
+                                        <h6>Đức <span>Khách hàng</span></h6>
                                     </div>
                                 </div>
                             </div>
