--- a/src/FoodZone/FoodZone.Web/Views/Shared/_GetCategoryByMenu.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_GetCategoryByMenu.cshtml
@@ -11,7 +11,7 @@
                     <div class="col-md-6 col-custom">
                         <div class="collection-content">
                             <div class="section-title text-left">
-                                <span class="section-title-1">@item.Name</span>
+                                <span class="section-title-1" style="font-size:30px">@item.Name</span>
                             </div>
                             <div class="desc-content">
                                 @Html.Action("GetFoodByCate", new { cateId = item.Id })
@@ -47,7 +47,7 @@
                     <div class="col-md-6 col-custom order-1 order-md-2">
                         <div class="collection-content">
                             <div class="section-title text-left">
-                                <span class="section-title-1">@item.Name</span>
+                                <span class="section-title-1" style="font-size:30px">@item.Name</span>
                             </div>
                             <div class="desc-content">
                                 @Html.Action("GetFoodByCate", new { cateId = item.Id })
