--- a/src/FoodZone/FoodZone.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_LoginPartial.cshtml
@@ -41,7 +41,7 @@ else
                 </li>
                 <li>
                     <a href="@Url.Action("Register", "Account", new { area = "" })">
-                        <span class="menu-text">Đăng kí</span>
+                        <span class="menu-text">Đăng ký</span>
                     </a>
                 </li>
             </ul>
