--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Create.cshtml
@@ -24,9 +24,14 @@
             </div>
         </div>
 
-        <div class="form-group col-md-6 mt-3">
-            <div> <img id="showImage" src="~/assets/images/category/@Model.Image" class="img-home form-control w-100 h-100 bg-light mr-2" alt=""></div>
-            <input type="file" class="form-control" id="avatar" name="uploadImage" accept="image/png, image/gif, image/jpeg"/>
+        <div class="form-group col-md-6 mt-3" >
+            <div>
+                <img id="showImage" src="~/assets/images/default-image.jpg" class="img-home form-control w-50 h-50 bg-light mr-2" alt="">
+
+
+                <input style=" opacity: 0.0;" type="file" class="form-control" id="avatar" name="uploadImage" accept="image/png, image/jpeg" />
+
+            </div>
         </div>
 
         <div class="form-group form-button mt-4 col-md-12">
@@ -51,9 +56,18 @@
                 reader.readAsDataURL(input.files[0]);
             }
         }
+        $('#showImage').on('click', function () {
+            $('#avatar').trigger('click');
 
-        $("#avatar").change(function () {
-            readURL(this);
         });
+        $("#avatar").change(function () {
+            if (this.files[0].type == "image/jpeg" || this.files[0].type == "image/png") {
+                readURL(this);
+            }
+            else {
+                document.getElementById("avatar").value = ""
+            }
+        });
+      
     </script>
 }
