--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/ReservationAdmin/_ListNewReservation.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/ReservationAdmin/_ListNewReservation.cshtml
@@ -1,16 +1,11 @@
 ﻿@model IEnumerable<Reservation>
 @{
-    ViewBag.Title = "Quản lý Đặt Bàn";
     int j = 1;
 }
-
-<div class="d-flex flex-row">
-    <h1 class="h3 mb-2 text-gray-800">Danh sách đặt bàn</h1>
-</div>
-<div class="card shadow mb-4" id="tables">
-    <div class="card-body">
+<div class="card-body shadow mb-4">
+   
         <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+            <table class="table table-bordered text-center"  width="100%" cellspacing="0">
                 <thead>
                     <tr>
                         <th>STT</th>
@@ -45,5 +40,5 @@
                 </tbody>
             </table>
         </div>
-    </div>
+
 </div>
