--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/TableAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/TableAdmin/Edit.cshtml
@@ -12,39 +12,42 @@
     <div class="form-horizontal d-flex flex-column">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group col-md-6">
-        @Html.LabelFor(model => model.Floor, htmlAttributes: new { @class = "control-label" })&nbsp; <p class="d-inline-block text-danger">*</p>
-        <div>
-            @Html.EditorFor(model => model.Floor, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Floor, "", new { @class = "text-danger" })
+        <div class="form-group col-md-6">
+            @Html.LabelFor(model => model.Floor, htmlAttributes: new { @class = "control-label" })&nbsp; <p class="d-inline-block text-danger">*</p>
+            <div>
+                @Html.EditorFor(model => model.Floor, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Floor, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="form-group col-md-6">
-        @Html.LabelFor(model => model.NumberTable, htmlAttributes: new { @class = "control-label" })&nbsp; <p class="d-inline-block text-danger">*</p>
-        <div>
-            @Html.EditorFor(model => model.NumberTable, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.NumberTable, "", new { @class = "text-danger" })
+        <div class="form-group col-md-6">
+            @Html.LabelFor(model => model.NumberTable, htmlAttributes: new { @class = "control-label" })&nbsp; <p class="d-inline-block text-danger">*</p>
+            <div>
+                @Html.EditorFor(model => model.NumberTable, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NumberTable, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="form-group col-md-6">
-        @Html.LabelFor(model => model.Capacity, htmlAttributes: new { @class = "control-label" })&nbsp; <p class="d-inline-block text-danger">*</p>
-        <div>
-            @Html.EditorFor(model => model.Capacity, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Capacity, "", new { @class = "text-danger" })
+        <div class="form-group col-md-6">
+            @Html.LabelFor(model => model.Capacity, htmlAttributes: new { @class = "control-label" })&nbsp; <p class="d-inline-block text-danger">*</p>
+            <div>
+                @Html.EditorFor(model => model.Capacity, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Capacity, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
         <div class="form-group col-md-6">
             <br />
             @Html.HiddenFor(m => m.Status)
             Trạng Thái: <b>@(Model.Status == 0 ? "Trống" : "Đã đặt")</b>
         </div>
+        @if (Model.Status == 0)
+        {
+            <div class="form-group form-button mt-4">
+                <input type="submit" name="signup" id="signup" class="btn btn-success" value="Sửa" />
+                @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
+            </div>
+        }
 
-        <div class="form-group form-button mt-4">
-            <input type="submit" name="signup" id="signup" class="btn btn-success" value="Sửa" />
-            @Html.ActionLink("Trở Về", "Index", null, new { @class = "btn btn-light ml-2" })
-        </div>
     </div>
 }
