--- a/src/FoodZone/FoodZone.Web/Views/Home/_HomeVoucher.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Home/_HomeVoucher.cshtml
@@ -5,8 +5,8 @@
             <!--Section Title Start-->
             <div class="col-12">
                 <div class="section-title text-center mb-30">
-                    <span class="section-title-1">Voucher</span>
-                    <h3 class="section-title-3">Voucher Mới Nhất</h3>
+                    <span class="section-title-1">Ưu đãi</span>
+                    <h3 class="section-title-3">Ưu Đãi Mới Nhất</h3>
                 </div>
             </div>
             <!--Section Title End-->
